--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ yarn-error.log*
 lerna-debug.log*
 __pycache__/
 *.py[cod]
+.DS_Store
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
