--- a/src/app/package.json
+++ b/src/app/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
-    "sequelize": "^5.21.4"
+    "sequelize": "^5.21.4",
+    "sequelize-auto": "^0.4.29"
   }
 }
